# Size-Aware-CLOCK-cache

./: .gitignore  CMakeLists.txt  README.md  build.sh  compare.py  conference_101719.tex  lru_test.cpp  mem_records  utils.cpp  utils.h
LruClockCache/: LruClockCache.h
MyClock/: MyClock.h
SAClock/: SAClock.h
basic_lru/: lrucache.hpp
perf/: adapt1  adapt2  alpha  compare.py  fake1  fake1_miss  fake1_thres  fake2  fake_input_size  mem_records  miss_records  perf1  perf2  perf3  perf4  real_input  real_thres  rej_records
